src/snapshots/miette__source_impls__tests__lf_prefix_fast_path_matches_generic_path.snap
---
source: src/source_impls.rs
expression: "format!(\"{checked} LF prefix cuts matched the generic path\")"
---
21 LF prefix cuts matched the generic path
