src/snapshots/miette__source_impls__tests__middle.snap
---
source: src/source_impls.rs
expression: snapshot_contents(&contents)
---
data: "bar\n"
span: SourceSpan { offset: SourceOffset(4), length: 4 }
line: 1
column: 0
line count: 2
