src/snapshots/miette__source_impls__tests__middle_of_line.snap
---
source: src/source_impls.rs
expression: snapshot_contents(&contents)
---
data: "bar\n"
span: SourceSpan { offset: SourceOffset(7), length: 4 }
line: 1
column: 3
line count: 2
