src/snapshots/miette__source_impls__tests__multiline_with_context.snap
---
source: src/source_impls.rs
expression: snapshot_contents(&contents)
---
data: "\nfoo\nbar\nbaz\n\n"
span: SourceSpan { offset: SourceOffset(8), length: 14 }
line: 2
column: 0
line count: 7
