src/snapshots/miette__source_impls__tests__multiline_with_context_line_start.snap
---
source: src/source_impls.rs
expression: snapshot_contents(&contents)
---
data: "one\ntwo\n\n"
span: SourceSpan { offset: SourceOffset(0), length: 9 }
line: 0
column: 0
line count: 3
