src/snapshots/miette__source_impls__tests__with_crlf.snap
---
source: src/source_impls.rs
expression: snapshot_contents(&contents)
---
data: "bar\r\n"
span: SourceSpan { offset: SourceOffset(5), length: 5 }
line: 1
column: 0
line count: 2
