src/snapshots/miette__source_impls__tests__zero_length_span_just_past_eof.snap
---
source: src/source_impls.rs
expression: "(nonempty, empty)"
---
(
    OutOfBounds,
    OutOfBounds,
)
